Fixing overlap issue between tagline and nav

--- a/_sass/global.sass
+++ b/_sass/global.sass
@@ -95,6 +95,7 @@ pre
     font-weight: 700
     margin-top: -0.5em
     margin-bottom: -0.2em
+    pointer-events: none
 
 .main-title
   @extend .tagline
